--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,18 @@
-<p>
-  search works!
-</p>
+<div class="row">
+    <div class="col">
+        <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar artista" />
+    </div>
+</div>
+
+
+<div class='container'>
+    <div class="card-columns m-5">
+        <div class="card" *ngFor="let artist of artists">
+            <img class="card-img-top" [src]="artist.images[0].url" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{ artist.name }}</h5>
+                <p class="card-text" *ngFor="let genero of artist.genres"><span class="badge badge-dark">{{genero.name}}</span></p>
+            </div>
+        </div>
+    </div>
+</div>
